# OSFNTC

./: .gitignore  LICENSE.txt  Makefile  README.md  history.txt  requirements.txt  requirements_P9.txt
flopoco/: .gitignore  CMakeLists.txt  README  TODO.org  cmake_cmd.txt  fplll-5.3.2-1-x86_64.pkg.tar.zst
flopoco/doc/: VHDLStyle.txt  coding_conventions.html  pipelining.org
flopoco/doc/Figures/: flopocoLogo.fig  flopocoLogo.pdf_t  logo.tex
flopoco/doc/doxygen/: Doxyfile  README  gen.sh
flopoco/doc/flopoco_developer_manual/: flopoco_developer_manual.tex
flopoco/doc/tutorial_zedboard/: tuto_zedboard_flopoco.tex
flopoco/doc/web/: README.txt  ReleaseNotes.txt  flopoco.css  flopoco_installation.html  flopoco_user_manual.html  index.html
flopoco/dot/: DSPBlock_16x16_F400_uid6.dot  IntAdder_24_F400_uid411.dot  IntMultiplierLUT_1x2_F400_uid114.dot  IntMultiplierLUT_1x2_F400_uid141.dot  IntMultiplierLUT_1x2_F400_uid168.dot  IntMultiplierLUT_1x2_F400_uid195.dot  IntMultiplierLUT_1x2_F400_uid33.dot  IntMultiplierLUT_1x2_F400_uid6.dot  IntMultiplierLUT_1x2_F400_uid60.dot  IntMultiplierLUT_1x2_F400_uid87.dot  IntMultiplierLUT_3x2_F400_uid104.dot  IntMultiplierLUT_3x2_F400_uid109.dot  IntMultiplierLUT_3x2_F400_uid116.dot  IntMultiplierLUT_3x2_F400_uid121.dot  IntMultiplierLUT_3x2_F400_uid126.dot  IntMultiplierLUT_3x2_F400_uid13.dot  IntMultiplierLUT_3x2_F400_uid131.dot  IntMultiplierLUT_3x2_F400_uid136.dot  IntMultiplierLUT_3x2_F400_uid143.dot  IntMultiplierLUT_3x2_F400_uid148.dot  IntMultiplierLUT_3x2_F400_uid153.dot  IntMultiplierLUT_3x2_F400_uid158.dot  IntMultiplierLUT_3x2_F400_uid163.dot  IntMultiplierLUT_3x2_F400_uid170.dot  IntMultiplierLUT_3x2_F400_uid175.dot  IntMultiplierLUT_3x2_F400_uid18.dot  IntMultiplierLUT_3x2_F400_uid180.dot  IntMultiplierLUT_3x2_F400_uid185.dot  IntMultiplierLUT_3x2_F400_uid190.dot  IntMultiplierLUT_3x2_F400_uid197.dot  IntMultiplierLUT_3x2_F400_uid202.dot  IntMultiplierLUT_3x2_F400_uid207.dot  IntMultiplierLUT_3x2_F400_uid212.dot  IntMultiplierLUT_3x2_F400_uid217.dot  IntMultiplierLUT_3x2_F400_uid23.dot  IntMultiplierLUT_3x2_F400_uid28.dot  IntMultiplierLUT_3x2_F400_uid35.dot  IntMultiplierLUT_3x2_F400_uid40.dot  IntMultiplierLUT_3x2_F400_uid45.dot  IntMultiplierLUT_3x2_F400_uid50.dot  (+11 more)
flopoco/script/: failed_ones.txt  generate_vhdl_files_dse.py  generate_vhdl_files_failed_ones.py  generate_vhdl_files_hssd_timing.py
flopoco/script/dot/: Arith_to_S3.dot  DSPBlock_10x24_F200_uid14.dot  DSPBlock_10x24_F200_uid1559.dot  DSPBlock_10x24_F200_uid1567.dot  DSPBlock_10x24_F200_uid22.dot  DSPBlock_10x24_F300_uid14.dot  DSPBlock_10x24_F300_uid1559.dot  DSPBlock_10x24_F300_uid1567.dot  DSPBlock_10x24_F300_uid22.dot  DSPBlock_10x24_F400_uid14.dot  DSPBlock_10x24_F400_uid1561.dot  DSPBlock_10x24_F400_uid1569.dot  DSPBlock_10x24_F400_uid22.dot  DSPBlock_10x24_F500_uid14.dot  DSPBlock_10x24_F500_uid1561.dot  DSPBlock_10x24_F500_uid1569.dot  DSPBlock_10x24_F500_uid22.dot  DSPBlock_10x24_F600_uid14.dot  DSPBlock_10x24_F600_uid1561.dot  DSPBlock_10x24_F600_uid1569.dot  DSPBlock_10x24_F600_uid22.dot  DSPBlock_11x11_F100_uid11.dot  DSPBlock_11x11_F200_uid11.dot  DSPBlock_11x11_F200_uid8.dot  DSPBlock_11x11_F250_uid11.dot  DSPBlock_11x11_F300_uid11.dot  DSPBlock_11x11_F300_uid8.dot  DSPBlock_11x11_F400_uid11.dot  DSPBlock_11x11_F400_uid8.dot  DSPBlock_11x11_F500_uid11.dot  DSPBlock_11x11_F500_uid8.dot  DSPBlock_11x11_F600_uid11.dot  DSPBlock_11x11_F600_uid8.dot  DSPBlock_11x24_F200_uid10.dot  DSPBlock_11x24_F200_uid85.dot  DSPBlock_11x24_F300_uid10.dot  DSPBlock_11x24_F300_uid85.dot  DSPBlock_11x24_F400_uid10.dot  DSPBlock_11x24_F400_uid87.dot  DSPBlock_11x24_F500_uid10.dot  (+4522 more)
flopoco/src/: DualTable.cpp  FixConstant.cpp  FixConstant.hpp  FloPoCo.hpp  FlopocoStream.cpp  FlopocoStream.hpp  Instance.cpp  Instance.hpp  LexerContext.hpp  Operator.cpp  Operator.hpp  OperatorContext.cpp  OperatorContext.hpp  ShiftReg.cpp  ShiftReg.hpp  Signal.cpp  Signal.hpp  SourceFileList.txt  Table.cpp  Table.hpp  Target.cpp  Target.hpp  TargetModel.cpp  TargetModel.hpp  TutorialOperator.cpp  TutorialOperator.hpp  UserInterface.cpp  UserInterface.hpp  VHDLLexerRule.l  main.cpp  main_minimal.cpp  utils.cpp  utils.hpp
flopoco/src/Apps/: Collision.cpp  Collision.hpp  FPFMAcc.cpp  FPFMAcc.hpp  FPJacobi.cpp  FPJacobi.hpp
flopoco/src/Attic/: FPPipeline.cpp  FPPipeline.hpp
flopoco/src/AutoTest/: AutoTest.cpp  AutoTest.hpp  cleanOpTest.sh  initOpTest.sh  initTests.sh  testScript.sh  testScriptGHDL.sh
flopoco/src/BitHeap/: Bit.cpp  Bit.hpp  BitHeap.cpp  BitHeap.hpp  BitHeapPlotter.cpp  BitHeapPlotter.hpp  BitHeapSolution.cpp  BitHeapSolution.hpp  BitHeapTest.cpp  BitHeapTest.hpp  CompressionStrategy.cpp  CompressionStrategy.hpp  Compressor.cpp  Compressor.hpp  FirstFittingCompressionStrategy.cpp  FirstFittingCompressionStrategy.hpp  MaxEfficiencyCompressionStrategy.cpp  MaxEfficiencyCompressionStrategy.hpp  OptimalCompressionStrategy.cpp  OptimalCompressionStrategy.hpp  ParandehAfsharCompressionStrategy.cpp  ParandehAfsharCompressionStrategy.hpp  WeightedBit.cpp
flopoco/src/Complex/: FPComplexAdder.cpp  FPComplexAdder.hpp  FPComplexMultiplier.cpp  FPComplexMultiplier.hpp  FixComplexAdd.hpp  FixComplexAdder.cpp  FixComplexAdder.hpp  FixComplexKCM.cpp  FixComplexKCM.hpp  FixComplexMult.cpp  FixComplexMult.hpp  FixComplexR2Butterfly.cpp  FixComplexR2Butterfly.hpp  FixFFT.cpp  FixFFT.hpp  FixFFTFullyPA.cpp  FixFFTFullyPA.hpp  IntFFT.cpp  IntFFT.hpp  IntFFTButterfly.cpp  IntFFTButterfly.hpp  IntFFTLevelDIT2.cpp  IntFFTLevelDIT2.hpp  IntTwiddleMultiplier.cpp  IntTwiddleMultiplier.hpp  IntTwiddleMultiplierAlternative.cpp  IntTwiddleMultiplierAlternative.hpp  OldFixedComplexMultiplier.cpp  OldFixedComplexMultiplier.hpp  TODO.txt  fakemain.cpp  toremove.txt
flopoco/src/ConstMult/: CRFPConstMult.cpp  FPConstDiv.cpp  FPConstDiv.hpp  FPConstMult.cpp  FPConstMult.hpp  FPRealKCM.cpp  FPRealKCM.hpp  FixFixConstMult.cpp  FixFixConstMult.hpp  FixRealConstMult.cpp  FixRealConstMult.hpp  FixRealKCM.cpp  FixRealKCM.hpp  (+31 more)
flopoco/tools/: EraseComments.sh  ise-runsyn.py  release_test.py  vivado-runsyn.py
(+1101 files in other folders)
